# agent-context

./: .clang-format  .clang-tidy  .cursorrules  .editorconfig  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .pre-commit-config.yaml  .shellcheckrc  .vimrc  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  activate.sh  agent-context.sh  bootstrap.sh  compress.sh  handoff.md  install.sh  pyproject.toml  setup.sh  skills_index.json  soc-vnv-c-coverage.md  test-scenario-gpt.md  why.md
.context/: .context  000-template-bug.md  001-bug-entrypoint_ssh_preflight_skip_e2e.md  002-bug-entrypoint_e2e_optional_ssh.md  003-bug-e2e_optional_step008_not_skipped.md  004-bug-smoke_project_fail_in_source_repo.md  README.md
.cursor/: hooks.json  worktrees.json
.cursor/hooks/: after-file-edit.sh  before-submit-prompt.sh  init-context.sh  session-end.sh  session-start.sh  stop.sh  sync-context.sh
agent-live-demo/: README.md  flow.d2  record_all.sh  rpg.d2  step.d2
agent-live-demo/01-raw-intelligence/: demo.py  demo.tape
agent-live-demo/02-role-and-persona/: agent.md  demo.py  demo.tape
agent-live-demo/03-skills-inheriting-role/: app  demo.py  demo.tape  main.c  swap
agent-live-demo/04-agentize/: buggy.c  buggy_app  demo.py  demo.tape  fixed.c  (+4 more)
builtin/: audit.sh  clean.sh  doctor.sh  init.sh  install.sh  log.sh  report.sh  tests.sh  update.sh  upgrade.sh
configs/: .clang-tidy  .editorconfig  .yamllint.yml
demo/: .env.example  E2E_TEST_GUIDE.md  README.md  SCENARIO_TEST_REPORT.md  cleanup.sh  demo.sh  install.sh  run-docker-parallel.sh  verify-e2e-results.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  TESTING_GUIDE.md  USER_GUIDE.md  agent-dev.md  agent-mgr.md  agent.md  installation.md  manual-fallback-guide.md  proposal.md
lib/: logging.sh  platform.sh
plan/: agent-workflow-system-plan-v2.md  agent-workflow-system-plan.md  manual-fallback-improvement-plan.md
policies/: README.md
scripts/: generate-index.sh
skills/: PIPELINE.md  README.md  USAGE.md  analyze.md  design.md  implement.md  review.md  test.md
templates/: .cursorrules.template  .gitignore.template  .project.yaml.example  README.md  cursorrules.index_map.tmpl  project.yaml.tmpl  secrets.gitkeep
tests/: Dockerfile.test  README.md  SUMMARY.md  docker-compose.test.yml  run-tests.sh  test-report.sh
workflows/: README.md  bug-fix.md  feature.md  hotfix.md  refactor.md
(+513 files in other folders)
