# Python project configuration
# Used by Black, isort, mypy, and other tools

[project]
name = "agent-context"
version = "0.1.0"
description = "Coding convention definitions and test framework"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[project.scripts]
coding-agent = "bin.coding_agent:main"

[tool.black]
# Line length (PEP 8 recommends 79, but Black defaults to 88)
line-length = 88

# Target Python version
target-version = ['py310', 'py311', 'py312']

# Include/exclude patterns
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

# String normalization (use double quotes)
skip-string-normalization = false

# Magic trailing comma (keep trailing commas)
skip-magic-trailing-comma = false

[tool.isort]
# Black compatibility
profile = "black"

# Line length (match Black)
line_length = 88

# Import sections
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["agent_context"]

# Multi-line imports
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Skip patterns
skip = [".git", ".venv", "venv", "__pycache__", "build", "dist"]
skip_glob = ["**/migrations/*"]

[tool.mypy]
# Python version
python_version = "3.10"

# Strictness settings
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true

# Disallow settings
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# None/Optional handling
strict_optional = true
no_implicit_optional = true

# Import discovery
ignore_missing_imports = true
follow_imports = "silent"

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude patterns
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
